--- a/CSharpCallPython/CSharpCallPython.csproj
+++ b/CSharpCallPython/CSharpCallPython.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IStringAna.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FmMaim.resx">
