--- a/FMWeb/FMWeb.csproj
+++ b/FMWeb/FMWeb.csproj
@@ -112,8 +112,13 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Corpus\css\stylelc.css" />
     <Content Include="Corpus\index.aspx" />
+    <Content Include="Corpus\js\jquery.js" />
+    <Content Include="Corpus\js\neulc.js" />
+    <Content Include="Corpus\js\numKey.js" />
     <Content Include="Corpus\neulc.aspx" />
+    <Content Include="Corpus\test.aspx" />
     <Content Include="css\multi-select.css" />
     <Content Include="css\stylelc.css" />
     <Content Include="css\ySelect.css" />
@@ -141,6 +146,7 @@
     <Content Include="js\jquery.multi-select.js" />
     <Content Include="js\ySelect.js" />
     <Content Include="MS001.aspx" />
+    <Content Include="OfficePreview.aspx" />
     <Content Include="pure-css3-rounded-button\index.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -210,6 +216,13 @@
     <Compile Include="Corpus\neulc.aspx.designer.cs">
       <DependentUpon>neulc.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Corpus\test.aspx.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Corpus\test.aspx.designer.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -226,6 +239,13 @@
     </Compile>
     <Compile Include="MS001.aspx.designer.cs">
       <DependentUpon>MS001.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OfficePreview.aspx.cs">
+      <DependentUpon>OfficePreview.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OfficePreview.aspx.designer.cs">
+      <DependentUpon>OfficePreview.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -284,6 +304,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OfficeToPDF\OfficeToPDF.csproj">
+      <Project>{023def9a-cdad-47ed-b657-6f305eb54867}</Project>
+      <Name>OfficeToPDF</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
