--- a/CSharpCallPython/CSharpCallPython.csproj
+++ b/CSharpCallPython/CSharpCallPython.csproj
@@ -66,6 +66,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,6 +77,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="fmChart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmChart.Designer.cs">
+      <DependentUpon>fmChart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fmChart2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmChart2.Designer.cs">
+      <DependentUpon>fmChart2.cs</DependentUpon>
+    </Compile>
     <Compile Include="FmMaim.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +104,12 @@
     <Compile Include="IStringAna.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="fmChart.resx">
+      <DependentUpon>fmChart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fmChart2.resx">
+      <DependentUpon>fmChart2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FmMaim.resx">
       <DependentUpon>FmMaim.cs</DependentUpon>
     </EmbeddedResource>
