--- a/CSharpCallPython/CSharpCallPython.csproj
+++ b/CSharpCallPython/CSharpCallPython.csproj
@@ -101,6 +101,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCluster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCluster.Designer.cs">
+      <DependentUpon>frmCluster.cs</DependentUpon>
+    </Compile>
     <Compile Include="IStringAna.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -115,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCluster.resx">
+      <DependentUpon>frmCluster.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
